--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1 id="h1Change">Сейчас день</h1>
-	<h1 id="h2Change"></h1>
-	<button id="day" >Выключить свет</button>
-	<button id="night">Включить свет</button>
+  <h1 class="h1Change">Сейчас день</h1>
+	<h1 class="h2Change"></h1>
+	<button class="day btn1" >Выключить свет</button>
+	<button class="night btn2">Включить свет</button>
 	<div class="loader-inner">
 		<div class="loader-line-wrap">
 			<div class="loader-line"></div>
