--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<div class="loader-line"></div>
 		</div>
 	</div>
+<script charset="UTF-8" src="//cdn.sendpulse.com/9dae6d62c816560a842268bde2cd317d/js/push/21b85e637ac4dcad627994aa840dea62_1.js" async></script>
 
 <script src="js/script.js"></script>
   
