--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <h1 class="h1Change">Сейчас день</h1>
 	<h1 class="h2Change"></h1>
 	<button class="day btn1" >Выключить свет</button>
-	<button class="night btn2">Включить свет</button>
+	<button class="night btn2">Включить свет</button> <br> <br>
+	<button class="nyaCat">Nya</button>
+	<div class="nyan"></div>
 	<div class="loader-inner">
 		<div class="loader-line-wrap">
 			<div class="loader-line"></div>
@@ -28,6 +30,10 @@
 			<div class="loader-line"></div>
 		</div>
 	</div>
+	<script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 <script charset="UTF-8" src="//cdn.sendpulse.com/9dae6d62c816560a842268bde2cd317d/js/push/21b85e637ac4dcad627994aa840dea62_1.js" async></script>
 
 <script src="js/script.js"></script>
