--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<h1 class="h2Change"></h1>
 	<button class="day btn1" >Выключить свет</button>
 	<button class="night btn2">Включить свет</button> <br> <br>
-	<button class="nyaCat">Nya</button>
+	<button class="nyaCat">Nya Cat</button>
 	<div class="nyan"></div>
 	<div class="loader-inner">
 		<div class="loader-line-wrap">
