--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<button class="day btn1" >Выключить свет</button>
 	<button class="night btn2">Включить свет</button> <br> <br>
 	<button class="nyaCat">Nya Cat</button>
+	<button class="reload">Вернуть пони</button>
 	<div class="nyan"></div>
 	<div class="loader-inner">
 		<div class="loader-line-wrap">
